# WasmMiner

./: Cargo.toml
crates/cli/: Cargo.toml
crates/cli/src/: main.rs  miner.rs  stratum_io.rs
crates/core/: Cargo.toml
crates/core/src/: equihash_compress.rs  equihash_solver.rs  lib.rs  stratum_utils.rs  types.rs
crates/core/tests/: solver_test.rs
crates/web-ui/: Cargo.toml  index.html
crates/web-ui/public/worker/: worker.js
crates/web-ui/src/: app.rs  main.rs
crates/web-ui/src/components/: config_panel.rs  job_info.rs  log_panel.rs  mod.rs  stats_display.rs
crates/web-ui/src/services/: mining.rs  mod.rs  websocket.rs  worker.rs  worker_pool.rs
crates/web-worker/: Cargo.toml
crates/web-worker/.cargo/: config.toml
crates/web-worker/src/: lib.rs
proxy/: Cargo.toml
proxy/src/: main.rs
src/: main.rs
