[package]
name = "wasmminer-proxy"
version = "0.2.0"
edition = "2021"
license = "MIT"

[[bin]]
name = "wasmminer-proxy"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-tungstenite = "0.26"
futures-util = "0.3"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
