[package]
name = "wasmminer-core"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
blake2b_simd = "1"
sha2 = "0.10"
hex = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"

[dev-dependencies]
equihash = { version = "0.2", default-features = false }
