[package]
name = "wasmminer-web-ui"
version = "0.2.0"
edition = "2021"
license = "MIT"

[dependencies]
leptos = { version = "0.7", features = ["csr"] }
wasmminer-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hex = "0.4"
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "console",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "Event",
    "ErrorEvent",
    "Worker",
    "Window",
    "Document",
    "HtmlElement",
    "HtmlInputElement",
    "HtmlDivElement",
    "Element",
] }
js-sys = "0.3"
gloo-timers = { version = "0.3", features = ["futures"] }
