[package]
name = "wasmminer-web-worker"
version = "0.2.0"
edition = "2021"
license = "MIT"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasmminer-core = { path = "../core" }
wasm-bindgen = "0.2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde-wasm-bindgen = "0.6"
hex = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console"] }
